--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: php
 php:
     - 7.0
@@ -6,7 +7,7 @@ php:
     - 5.4
 
 before_script:
-    - composer install --dev
+    - composer install
 
 script:
     - vendor/bin/atoum -bf vendor/autoload.php -d src/Tests/Units/
